<resources>
    <string name="app_name">Dongman</string>
    <string name="login_title">로그인</string>
    <string name="login_sub">아이디와 비밀번호를 입력하세요.</string>
    <string name="hint_id">아이디</string>
    <string name="hint_pw">비밀번호</string>
    <string name="btn_login">로그인</string>
    <string name="text_no_account">계정이 없으신가요?</string>
    <string name="text_signup">회원가입</string>
    <string name="btn_kakao">카카오 로그인</string>
    <string name="btn_google">Google 로그인</string>
    <string name="pw_find">비밀번호를 잊었나요?</string>
</resources>
